[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/player01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/moon01.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World01.gd" type="Script" id=3]
[ext_resource path="res://Assets/textures/skybox/606169f4f4726086a4605007cd89f0c5.jpg" type="Texture" id=4]
[ext_resource path="res://Scenes/blackhole01.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Sun01.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/rock01.tscn" type="PackedScene" id=7]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 4 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_orientation = Basis( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1 )
background_energy = 0.1
dof_blur_near_enabled = true
glow_enabled = true

[node name="World" type="Spatial"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="celestial_body_container" type="Spatial" parent="Player"]

[node name="spawn_celestial_body" type="Timer" parent="Player/celestial_body_container"]
wait_time = 15.0
autostart = true

[node name="moon_axis" type="Spatial" parent="."]
transform = Transform( 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, 0, 0, 0 )

[node name="moon" parent="moon_axis" instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 4.88762e-07, -1, 1.62921e-07, -5.30863e-14, 1.62921e-07, 1, -1, -4.88762e-07, 2.65431e-14, 0, 2, 0 )
visible = false
shadow_enabled = true

[node name="blackhole" parent="." instance=ExtResource( 5 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -50, 0, 0 )

[node name="Sun" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 0 )

[node name="rock" parent="." instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, -1, 1.62921e-07, 0, -1.62921e-07, -1, 1, -1.62921e-07, 2.65431e-14, 10, 30, 0 )
[connection signal="timeout" from="Player/celestial_body_container/spawn_celestial_body" to="." method="_on_spawn_celestial_body_timeout"]
